--- a/nkorg/example/module.yml
+++ b/nkorg/example/module.yml
@@ -8,7 +8,7 @@ link: https://nobody-knows.org/
 version: 4.0.0
 help: hl_example
 requirements:
-    system: 4.0.0-b11
+    system: 4.0.2
     php: 7.0.0
 tables:
     add:
