--- a/nkorg/sitemaplinks/module.yml
+++ b/nkorg/sitemaplinks/module.yml
@@ -8,7 +8,7 @@ link: https://nobody-knows.org/
 version: 4.0.0
 help: 
 requirements:
-    system: 4.0.0-rc17
+    system: 4.0.2
     php: 7.0.0
 tables:
 configOptions:
