--- a/nkorg/inactivity_manager/module.yml
+++ b/nkorg/inactivity_manager/module.yml
@@ -5,10 +5,10 @@ author: imagine
 name: Inactivity Manager
 description: "The Inactivity Manager module allows you to manage and display of various messages, in case of temporary inactivity or increased response time of your website, for example when you're on vacation. The module also allows you to disable certain features of your FanPress CM system like posting new comments."
 link: https://nobody-knows.org/
-version: 4.0.0
+version: 4.1.0
 help: 
 requirements:
-    system: 4.0.2
+    system: 4.1.0-a1
     php: 7.0.0
 tables:
 configOptions:
