--- a/nkorg/integration/module.yml
+++ b/nkorg/integration/module.yml
@@ -8,7 +8,7 @@ link: https://nobody-knows.org/
 version: 4.1.0
 help: 
 requirements:
-    system: 4.1.0-a1
+    system: 4.1.0-b3
     php: 7.0.0
 tables:
 configOptions:
