--- a/nkorg/extstats/module.yml
+++ b/nkorg/extstats/module.yml
@@ -5,10 +5,12 @@ author: imagine
 name: Extended statistics
 description: "Extended statistics for articles, shares, coments and more."
 link: https://nobody-knows.org/
-version: 4.1.2
+version: 4.1.3
 help: 
 requirements:
     system: 4.1.0-rc4
     php: 7.0.0
 tables:
 configOptions:
+    add:
+        cookie_duration: 3600
