--- a/nkorg/polls/config/controller.yml
+++ b/nkorg/polls/config/controller.yml
@@ -1,4 +1,6 @@
 ## Module controller map
 ---
-extstats/statistics: statistics
+polls/list: polllist
+polls/add: polladd
+polls/edit: polledit
 ajax/extstats/delete: deleteentry
