--- a/nkorg/polls/config/controller.yml
+++ b/nkorg/polls/config/controller.yml
@@ -3,4 +3,4 @@
 polls/list: polllist
 polls/add: polladd
 polls/edit: polledit
-ajax/extstats/delete: deleteentry
+ajax/polls/ajaxpublic: ajaxPublic
