Show results and change between results, poll form

--- a/nkorg/polls/config/tables/polls.yml
+++ b/nkorg/polls/config/tables/polls.yml
@@ -40,6 +40,10 @@ cols:
         type: bigint
         length: 20
         params: NOT NULL
+    voteexpiration:
+        type: bigint
+        length: 20
+        params: NOT NULL
     createtime:
         type: bigint
         length: 20
