* Example module: define cronjob & removal of cron/getList event class * Votelog ip removal cronjob

--- a/nkorg/polls/module.yml
+++ b/nkorg/polls/module.yml
@@ -17,3 +17,5 @@ configOptions:
     add:
         show_latest_poll: 0
         vote_expiration_default: 2678400
+crons:
+    anonymizeVotelog: 2419200
