--- a/nkorg/sitemaplinks/module.yml
+++ b/nkorg/sitemaplinks/module.yml
@@ -5,10 +5,10 @@ author: imagine
 name: Sitemap.xml link list
 description: "Creates editor link list from sitemap.xml files."
 link: https://nobody-knows.org/
-version: 4.2.0
+version: 4.3.0
 help: 
 requirements:
-    system: 4.1.0-b3
+    system: 4.3.0-rc3
     php: 7.0.0
 tables:
 configOptions:
