--- a/nkorg/polls/module.yml
+++ b/nkorg/polls/module.yml
@@ -5,10 +5,10 @@ author: imagine
 name: Polls
 description: "Module to create polls with single/ multiple answers and so on."
 link: https://nobody-knows.org/
-version: 4.3.3
+version: 4.3.4
 help: 
 requirements:
-    system: 4.3.0-rc2
+    system: 4.3.0-rc5
     php: 7.0.0
 tables:
     alter:
@@ -17,5 +17,6 @@ configOptions:
     add:
         show_latest_poll: 0
         vote_expiration_default: 2678400
+        chart_type: pie
 crons:
     anonymizeVotelog: 2419200
