--- a/nkorg/calendar/module.yml
+++ b/nkorg/calendar/module.yml
@@ -8,7 +8,7 @@ link: https://nobody-knows.org/
 version: 1.0.0
 help: 
 requirements:
-    system: 4.4.0-a1
+    system: 4.3.999
     php: 7.0.0
 tables:
     add:
