--- a/nkorg/extstats/module.yml
+++ b/nkorg/extstats/module.yml
@@ -5,10 +5,10 @@ author: imagine
 name: Extended statistics
 description: "Extended statistics for articles, shares, coments and more."
 link: https://nobody-knows.org/
-version: 4.2.10
+version: 4.2.11
 help: 
 requirements:
-    system: 4.3.0-rc2
+    system: 4.4.0-b5
     php: 7.0.0
 tables:
 configOptions:
