--- a/nkorg/extstats/config/tables/counts_links.yml
+++ b/nkorg/extstats/config/tables/counts_links.yml
@@ -25,8 +25,16 @@ cols:
         length: 20
         params: NOT NULL
     lasthit:
-        type: bigint
+        type: varchar
         length: 20
+        params: NOT NULL
+    lastagent:
+        type: varchar
+        length: 128
+        params: NOT NULL
+    lastip:
+        type: varchar
+        length: 512
         params: NOT NULL
 indices:
     urlhash:
@@ -34,6 +42,9 @@ indices:
         isUnqiue: true
     url:
         col: url
+        isUnqiue: false
+    lastagent:
+        col: lastagent
         isUnqiue: false
     url_hits:
         col:
