--- a/nkorg/extstats/module.yml
+++ b/nkorg/extstats/module.yml
@@ -5,12 +5,14 @@ author: imagine
 name: Extended statistics
 description: "Extended statistics for articles, shares, coments and more."
 link: https://nobody-knows.org/
-version: 4.4.1
+version: 4.4.2
 help: 
 requirements:
     system: 4.4.0-b5
     php: 7.0.0
 tables:
+    alter:
+        counts_links
 configOptions:
     add:
         cookie_duration: 3600
