--- a/nkorg/example/module.yml
+++ b/nkorg/example/module.yml
@@ -8,7 +8,7 @@ link: https://nobody-knows.org/
 version: 4.4.0
 help: hl_example
 requirements:
-    system: 4.4.0
+    system: 4.5.0-b2
     php: 7.0.0
 tables:
     add:
