--- a/nkorg/extstats/module.yml
+++ b/nkorg/extstats/module.yml
@@ -5,12 +5,14 @@ author: imagine
 name: Extended statistics
 description: "Extended statistics for articles, shares, coments and more."
 link: https://nobody-knows.org/
-version: 4.4.6
+version: 4.5.0
 help: 
 requirements:
     system: 4.5.0-b2
     php: 7.0.0
 tables:
+    add:
+        counts_referrer
     alter:
         counts_links
 configOptions:
