--- a/nkorg/extstats/module.yml
+++ b/nkorg/extstats/module.yml
@@ -5,10 +5,10 @@ author: imagine
 name: Extended statistics
 description: "Extended statistics for articles, shares, coments and more."
 link: https://nobody-knows.org/
-version: 4.5.1-dev
+version: 4.5.2
 help: 
 requirements:
-    system: 4.5.0-b2
+    system: 4.5.2
     php: 7.0.0
 tables:
     add:
@@ -21,6 +21,6 @@ configOptions:
         timespan_default: 30
         link_compress: 50
         show_visitors: 0
-        url_base: "http://"
+        url_base: "https://"
 crons:
     anonymizeLinks: 2419200
