--- a/nkorg/extstats/module.yml
+++ b/nkorg/extstats/module.yml
@@ -5,7 +5,7 @@ author: imagine
 name: Extended statistics
 description: "Extended statistics for articles, shares, coments and more."
 link: https://nobody-knows.org/
-version: 4.5.3
+version: 5.0-dev
 help: 
 requirements:
     system: 4.5.2
