--- a/nkorg/sitemaplinks/module.yml
+++ b/nkorg/sitemaplinks/module.yml
@@ -5,11 +5,11 @@ author: imagine
 name: Sitemap.xml link list
 description: "Creates editor link list from sitemap.xml files."
 link: https://nobody-knows.org/
-version: 4.3.0
+version: 5.0-dev
 help: 
 requirements:
-    system: 4.3.0-rc3
-    php: 7.0.0
+    system: 5.0.0-a1
+    php: 7.2.0
 tables:
 configOptions:
     add:
