--- a/nkorg/calendar/module.yml
+++ b/nkorg/calendar/module.yml
@@ -8,8 +8,8 @@ link: https://nobody-knows.org/
 version: 1.0.2
 help: 
 requirements:
-    system: 4.5.0-b2
-    php: 7.0.0
+    system: 5.0.0-a1
+    php: 7.2.0
 tables:
     add:
         appointments
