--- a/nkorg/integration/module.yml
+++ b/nkorg/integration/module.yml
@@ -8,7 +8,7 @@ link: https://nobody-knows.org/
 version: 4.5.0
 help: 
 requirements:
-    system: 4.5.0-b2
-    php: 7.0.0
+    system: 5.0.0-a1
+    php: 7.2.0
 tables:
 configOptions:
