--- a/nkorg/polls/module.yml
+++ b/nkorg/polls/module.yml
@@ -8,8 +8,8 @@ link: https://nobody-knows.org/
 version: 5.0-dev
 help: 
 requirements:
-    system: 4.5.0-b2
-    php: 7.0.0
+    system: 5.0.0-a1
+    php: 7.2.0
 tables:
     alter:
         polls
