Use module data folder

--- a/nkorg/polls/module.yml
+++ b/nkorg/polls/module.yml
@@ -7,6 +7,7 @@ description: "Module to create polls with single/ multiple answers and so on."
 link: https://nobody-knows.org/
 version: 5.0-dev
 help: 
+useDataFolder: true
 requirements:
     system: 5.0.0-a1
     php: 7.2.0
