--- a/nkorg/extstats/config/tables/counts_referrer.yml
+++ b/nkorg/extstats/config/tables/counts_referrer.yml
@@ -38,7 +38,7 @@ indices:
     url_hits:
         col:
             refurl
-            urlhash
+            refhash
             counthits
         isUnqiue: false
 defaultvalues:
