--- a/nkorg/calendar/module.yml
+++ b/nkorg/calendar/module.yml
@@ -5,7 +5,7 @@ author: imagine
 name: Calendar
 description: "Calendar module"
 link: https://nobody-knows.org/
-version: 1.0.8-b1
+version: 1.0.9
 help: 
 requirements:
     system: 5.2.0-a1
