--- a/nkorg/calendar/config/configure.yml
+++ b/nkorg/calendar/config/configure.yml
@@ -1,8 +1,14 @@
 ## Module configure config
 ---
 frontend_days:
-    type: textInput
+    type: numberInput
     conf:
         text: GUI_APPOINTMENT_FRONTEND_DAYS
         icon: calendar
+        size: lg
+dashboard_items:
+    type: numberInput
+    conf:
+        text: GUI_APPOINTMENT_DASHBOARD_ITEMS
+        icon: gauge-high
         size: lg
