--- a/nkorg/example/module.yml
+++ b/nkorg/example/module.yml
@@ -9,7 +9,7 @@ version: 5.3.0-a1
 help: hl_example
 useDataFolder: true
 requirements:
-    system: 5.3.0-a1
+    system: 5.3.0-dev
     php: 8.0.0
 tables:
 configOptions:
